# canvas

./: README.md  canvas.code-workspace  canvas.csv  compose.yaml  package-lock.json  process_connections.json
backend/: Cargo.toml  Dockerfile  README.md
backend/.cargo/: config.toml  config1.toml  config2-debug.toml  config2.toml  config3.toml
backend/migrations/: 0001_create-database.sql  0001_create-database_down.sql
backend/src/: handler.rs  main.rs  pixel.rs  postgres.rs  replica_manager.rs
frontend/: .env  README.md  limit_test.py  package-lock.json  package.json
frontend/public/: index.html
frontend/replacedstuff/: Header.js  Temp.js  pixel.scss
frontend/src/: App.js  index.js  setupProxy.js
frontend/src/components/: Canvas.js  Editor.js  Pixel.js  Title.js
frontend/src/components/common/: PixelPopUp.js  Title.js
frontend/src/components/footer/: Footer.js
frontend/src/components/pixels/: CurrentPixel.js  Footer.js  Pixel.js  Row.js
frontend/src/objects/: Pixel.js
frontend/src/pages/: App.js  Temp.js
frontend/src/styles/: App.scss  button.scss  pixel.scss
proxy/: README.md  package-lock.json
proxy/src/: backup_proxy.js  package-lock.json  proxy.js  proxy2.js  proxy_classes.js
src/: App.js  index.js
src/components/: Canvas.js  Footer.js  Header.js  Pixel.js  Row.js
src/styles/: drawingPanel.scss
