[package]
name = "cpsc-559-final-project"
version = "0.1.0"
authors = ["Cole Barraclough <cole.Barraclough@ucalgary.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web-actors = "4.1"
actix-web = "4.4"
actix-ws = "0.2.5"
actix-cors = "0.7.0"
deadpool-postgres = "0.12.1"
deadpool = "0.10.0"
env_logger = "0.11.2"
log = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "^0.7"
tokio-postgres-migration = "^0.1"
rand = "0.8"
tokio = { version = "1.13.1", features = ["rt", "macros", "sync", "time"] }
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
